src/objects/Stable_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Source_Id__c</fullName>
        <label>Application Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Stable Applications</relationshipLabel>
        <relationshipName>Stable_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Current__c</fullName>
        <formula>Application__r.Royalty_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stable_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFID_App__c</fullName>
        <formula>Application__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID_App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stable_App_Status__c</fullName>
        <label>Stable App Status</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stable__c</fullName>
        <label>Stable</label>
        <referenceTo>Stable__c</referenceTo>
        <relationshipLabel>Stable Applications</relationshipLabel>
        <relationshipName>Stable_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stable Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAP-{0000000000}</displayFormat>
        <label>Stable Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stable Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>